test/fail/param_assign.zn
# ERRORS: 1
func foo(x: int) {
  x = 10
  0
}

func main() {
  foo(5)
  0
}
